--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="th">
+
 <head>
   <meta charset="UTF-8">
   <title>My Private Diary</title>
@@ -10,20 +11,30 @@
       margin: 40px auto;
       background: #fff7f0;
     }
+
     h2 {
       text-align: center;
     }
+
     textarea {
       width: 100%;
       height: 140px;
       padding: 10px;
       font-size: 14px;
     }
+
+    input {
+      width: 100%;
+      padding: 8px;
+      font-size: 14px;
+    }
+
     button {
       margin-top: 10px;
       padding: 8px 16px;
       cursor: pointer;
     }
+
     .entry {
       background: #ffffff;
       border-radius: 6px;
@@ -31,120 +42,168 @@
       margin-top: 12px;
       border-left: 4px solid #ff9f68;
     }
+
     .date {
       font-size: 12px;
       color: #666;
     }
   </style>
 </head>
+
 <body>
+
+  <!-- 🔐 LOGIN -->
   <div id="loginBox">
-  <h2>🔐 เข้าใช้งานไดอารี่</h2>
-  <input id="username" placeholder="ชื่อผู้ใช้"><br><br>
-  <input id="password" type="password" placeholder="รหัสผ่าน"><br><br>
-  <button onclick="login()">เข้าใช้งาน</button>
-  <button onclick="register()">สมัครผู้ใช้ใหม่</button>
-</div>
+    <h2>🔐 เข้าใช้งานไดอารี่</h2>
 
-<div id="diaryApp" style="display:none;">
+    <input id="username" placeholder="ชื่อผู้ใช้"><br><br>
+    <input id="password" type="password" placeholder="รหัสผ่าน"><br>
 
-  <h2>ไดอารี่ของฉัน 🧡</h2>
-  <button onclick="logout()">← ย้อนกลับ</button>
-  <br><br>
+    <button onclick="login()">เข้าใช้งาน</button>
+    <button onclick="register()">สมัครผู้ใช้ใหม่</button>
+    <br>
+    <button onclick="forgotPassword()">ลืมรหัสผ่าน</button>
+  </div>
 
-  <textarea id="text" placeholder="วันนี้รู้สึกยังไงบ้าง..."></textarea>
-  <br>
-  <button onclick="saveDiary()">บันทึก</button>
+  <!-- 📔 DIARY -->
+  <div id="diaryApp" style="display:none;">
+    <h2>ไดอารี่ของฉัน 🧡</h2>
+    <button onclick="logout()">← ออกจากระบบ</button>
+    <br><br>
 
-  <h3>บันทึกย้อนหลัง</h3>
-  <div id="list"></div>
+    <textarea id="text" placeholder="วันนี้รู้สึกยังไงบ้าง..."></textarea>
+    <br>
+    <button onclick="saveDiary()">บันทึก</button>
 
-</div>
+    <h3>บันทึกย้อนหลัง</h3>
+    <div id="list"></div>
+  </div>
 
   <script>
     let currentUser = null;
 
-function register() {
-  const u = username.value.trim();
-  const p = password.value;
+    // 🆕 สมัครผู้ใช้
+    function register() {
+      const u = username.value.trim();
+      const p = password.value;
 
-  if (!u || !p) {
-    alert("กรอกข้อมูลให้ครบ");
-    return;
-  }
+      if (!u || !p) {
+        alert("กรอกข้อมูลให้ครบ");
+        return;
+      }
 
-  const users = JSON.parse(localStorage.getItem("users") || "{}");
-  if (users[u]) {
-    alert("มีผู้ใช้นี้แล้ว");
-    return;
-  }
+      const users = JSON.parse(localStorage.getItem("users") || "{}");
 
-  users[u] = p;
-  localStorage.setItem("users", JSON.stringify(users));
-  alert("สมัครสำเร็จ 🎉");
-}
+      if (users[u]) {
+        alert("มีผู้ใช้นี้แล้ว");
+        return;
+      }
 
-function logout() {
-  currentUser = null;
-  diaryApp.style.display = "none";
-  loginBox.style.display = "block";
-  document.getElementById("list").innerHTML = "";
-}
+      users[u] = btoa(p); // 🔐 เข้ารหัส
+      localStorage.setItem("users", JSON.stringify(users));
 
+      alert("สมัครสำเร็จ 🎉");
+      username.value = "";
+      password.value = "";
+    }
 
-function login() {
-  const u = username.value.trim();
-  const p = password.value;
+    // 🔐 เข้าใช้งาน
+    function login() {
+      const u = username.value.trim();
+      const p = password.value;
 
-  const users = JSON.parse(localStorage.getItem("users") || "{}");
-  if (users[u] !== p) {
-    alert("ชื่อผู้ใช้หรือรหัสผ่านผิด");
-    return;
-  }
+      const users = JSON.parse(localStorage.getItem("users") || "{}");
 
-  currentUser = u;
-  loginBox.style.display = "none";
-  diaryApp.style.display = "block";
-  showDiary();
-}
+      if (!users[u] || users[u] !== btoa(p)) {
+        alert("ชื่อผู้ใช้หรือรหัสผ่านผิด");
+        return;
+      }
 
+      currentUser = u;
+      loginBox.style.display = "none";
+      diaryApp.style.display = "block";
+      showDiary();
+    }
+
+    // 🔁 ลืมรหัสผ่าน (ไม่ลบข้อมูล)
+    function forgotPassword() {
+      const u = username.value.trim();
+
+      if (!u) {
+        alert("กรุณากรอกชื่อผู้ใช้ก่อน");
+        return;
+      }
+
+      const users = JSON.parse(localStorage.getItem("users") || "{}");
+
+      if (!users[u]) {
+        alert("ไม่พบผู้ใช้นี้");
+        return;
+      }
+
+      const newPass = prompt("กรอกรหัสผ่านใหม่");
+
+      if (!newPass) {
+        alert("ยกเลิกการตั้งรหัสผ่าน");
+        return;
+      }
+
+      users[u] = btoa(newPass); // 🔐 เข้ารหัสเหมือน register
+      localStorage.setItem("users", JSON.stringify(users));
+
+      alert("ตั้งรหัสผ่านใหม่เรียบร้อย ✅");
+      password.value = "";
+    }
+
+    // 🚪 ออกจากระบบ
+    function logout() {
+      currentUser = null;
+      diaryApp.style.display = "none";
+      loginBox.style.display = "block";
+      document.getElementById("list").innerHTML = "";
+    }
+
+    // 💾 บันทึกไดอารี่
     function saveDiary() {
-  const text = document.getElementById("text").value.trim();
-  if (text === "") return;
+      const text = document.getElementById("text").value.trim();
+      if (text === "") return;
 
-  const key = "diary_" + currentUser;
-  const diaries = JSON.parse(localStorage.getItem(key) || "[]");
+      const key = "diary_" + currentUser;
+      const diaries = JSON.parse(localStorage.getItem(key) || "[]");
 
-  diaries.push({
-    date: new Date().toLocaleString(),
-    text: text
-  });
+      diaries.push({
+        date: new Date().toLocaleString(),
+        text: text
+      });
 
-  localStorage.setItem(key, JSON.stringify(diaries));
-  document.getElementById("text").value = "";
-  showDiary();
-}
+      localStorage.setItem(key, JSON.stringify(diaries));
+      document.getElementById("text").value = "";
+      showDiary();
+    }
 
+    // 📖 แสดงไดอารี่
     function showDiary() {
-  const key = "diary_" + currentUser;
-  const diaries = JSON.parse(localStorage.getItem(key) || "[]");
-  const list = document.getElementById("list");
-  list.innerHTML = "";
+      const key = "diary_" + currentUser;
+      const diaries = JSON.parse(localStorage.getItem(key) || "[]");
+      const list = document.getElementById("list");
+      list.innerHTML = "";
 
-  diaries.slice().reverse().forEach(d => {
-    const div = document.createElement("div");
-    div.className = "entry";
-    div.innerHTML = `
-      <div class="date">${d.date}</div>
-      <div>${d.text}</div>
-    `;
-    list.appendChild(div);
-  });
-}
+      diaries.slice().reverse().forEach(d => {
+        const div = document.createElement("div");
+        div.className = "entry";
 
+        const dateDiv = document.createElement("div");
+        dateDiv.className = "date";
+        dateDiv.textContent = d.date;
 
-    // โหลดข้อมูลตอนเปิดหน้าเว็บ
-    // showDiary();
+        const textDiv = document.createElement("div");
+        textDiv.textContent = d.text;
+
+        div.appendChild(dateDiv);
+        div.appendChild(textDiv);
+        list.appendChild(div);
+      });
+    }
   </script>
 
 </body>
